Adds visibility label to vote form

--- a/app/views/votes/_form.html.erb
+++ b/app/views/votes/_form.html.erb
@@ -46,6 +46,7 @@
       </div>
       <br>
 
+      <label class="lead">Visibility <%= icon('info-circle')%></label>
       <div class="control-group">
         <label class="radio-inline">
           <%= f.radio_button(:private, false, as: :radio, value: true, checked: true) %>
