--- a/app/views/votes/_votes_table.html.erb
+++ b/app/views/votes/_votes_table.html.erb
@@ -2,12 +2,11 @@
   <thead>
     <tr>
       <th>#</th>
-      <th>Name</th>
+      <th>Title</th>
       <th>Status</th>
       <th>Created</th>
       <th>Forms</th>
       <th>Candidates</th>
-      <th>Title</th>
     </tr>
   </thead>
 
@@ -15,12 +14,19 @@
     <% votes.each_with_index do |vote, i| %>
       <tr>
         <td><%= i + 1 %></td>
-        <td><%= link_to "Voting#{i + 1}", vote %></td>
+        <td>
+          <%= link_to(vote) do %>
+            <% if vote.title && !vote.title.empty? %>
+              <%= vote.title%>
+            <% else%>
+              unnamed
+            <%end%>
+          <%end%>
+        </td>
         <td><%= vote.status %></td>
         <td><%= time_ago_in_words(vote.created_at) %> ago</td>
         <td><%= vote.voting_forms.count %></td>
         <td><%= vote.candidates.count %></td>
-        <td><%= vote.title %></td>
       </tr>
     <% end %>
   </tbody>
