--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="jumbotron">
   <h1><span class="brand-color">Val</span>id <span class="brand-color">Vo</span>te</h1>
-  <h3>Simple way of organizing better votings!</h3>
+  <h3>Organize better votes!</h3>
   <br/>
   <br/>
   <br/>
