--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -24,9 +24,9 @@ html, body {
 }
 
 .jumbotron {
+  background-size: cover;
   .btn {
     width: 200px;
     margin-bottom: 10px;
-    //margin-left: 110px;
   }
 }
