--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -14,8 +14,7 @@
       <ul class="nav navbar-nav">
         <li>
           <%= link_to(controller: :votes, action: :new) do %>
-          <%= icon('plus-circle')%>
-            create voting
+            create vote
           <%end%>
         </li>
         <li class="Votings">
