Adds vote and receipt views for voter

--- a/app/views/votes/_form.html.erb
+++ b/app/views/votes/_form.html.erb
@@ -63,7 +63,7 @@
           <input type="radio" name="systemradio" checked>first-past-the-post
         </label>
         <label class="radio-inline">
-          <input type="radio" name="systemradio" disabled><light>ranked-choice voting</light>
+          <input type="radio" name="systemradio" disabled>ranked-choice voting
         </label>
       </div>
       <br>
