--- a/app/assets/stylesheets/pdf.css.scss.erb
+++ b/app/assets/stylesheets/pdf.css.scss.erb
@@ -13,30 +13,35 @@ div.page-break {
   border-right: dashed 1px;
 }
 
-.voting-receipt {
+.voting-form-right-half {
   float:right;
   height:100%;
   width:49%;
   text-align: center;
+}
 
+.voting-form-vote {
+  margin:0;
+  padding:0;
+  height: 50%;
+  border-bottom: dashed 1px;
 }
 
 .circle {
-  margin: 30px 0 0 43px;
-  width: 250px;
-  height: 250px;
+  margin: 30px 0 0 70px;
+  width: 200px;
+  height: 200px;
   border: 2px solid;
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
 
   .label {
-    margin-top: 45%;
-    margin-left: 20%;
+    margin-top: 43%;
+    margin-left: 15%;
     text-align: left;
   }
 }
-
 
 .qr {
   table {
@@ -50,7 +55,7 @@ div.page-break {
     border-left: solid 10px #000;
     padding: 0;
     margin: 0;
-    width: 0px;
+    width: 0;
     height: 10px;
   }
 
