--- a/app/views/voting_decisions/_form.html.erb
+++ b/app/views/voting_decisions/_form.html.erb
@@ -1,25 +1,35 @@
 <%= form_for(voting_decision) do |f| %>
-  <% if voting_decision.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(voting_decision.errors.count, "error") %> prohibited this voting_decision from being saved:</h2>
+      <legend class="lead">Vote</legend>
+      <% if voting_decision.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(voting_decision.errors.count, "error") %> prohibited this vote from being saved:</h2>
 
-      <ul>
-      <% voting_decision.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+            <ul>
+              <% voting_decision.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :candidate %><br>
-    <%= f.number_field :voting_form_count, value: 2 %>
-  </div>
-  <div class="field">
-    <%= f.label :candidate_count %><br>
-    <%= f.number_field :candidate_count, value: 2 %>
-  </div>
-  <div class="actions">
-    <%= f.submit 'Create Vote', :class => 'btn btn-primary btn-lg' %>
-  </div>
+      <div class="form-group">
+        <div class="form-check">
+          <label class="form-check-label">
+            <%= f.radio_button :candidate_number, -1, as: :radio %>
+            vote empty
+          </label>
+        </div>
+        <% @voting_decision.vote.candidates.count.times do |i| %>
+            <div class="form-check">
+              <label class="form-check-label">
+                <%= f.radio_button :candidate_number, i + 1, as: :radio %>
+                <%= i + 1 %>
+              </label>
+            </div>
+        <%end%>
+      </div>
+
+      <div class="actions">
+        <%= f.submit 'Vote', :class => 'btn btn-primary' %>
+      </div>
 <% end %>
