link name tweak

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -19,7 +19,7 @@
         </li>
         <li class="Votings">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-            votings <span class="caret"></span>
+            votes <span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
             <li>
@@ -32,13 +32,13 @@
         </li>
         <li class="About">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-            About <span class="caret"></span>
+            about <span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
             <li>
               <a href="http://sciprojektivoting.blogspot.fi/" target="_blank" >
                 <%= icon('heart')%>
-                Blog
+                blog
               </a>
             </li>
           </ul>
