--- a/app/views/votes/index.html.erb
+++ b/app/views/votes/index.html.erb
@@ -1,6 +1,6 @@
 <br>
 <%= render partial: "shared/notice", locals: { notice: notice } %>
 <legend class="lead">
-  Votings
+  Public votes
 </legend>
 <%= render partial: "votes_table", locals: { votes: @votes } %>
