--- a/app/views/votes/_candidate_list.pdf.erb
+++ b/app/views/votes/_candidate_list.pdf.erb
@@ -1,5 +1,10 @@
 <div class="candidate-list">
+  <% if vote.title %>
+  <h1>Vote title:</h1>
+  <h2><%= vote.title %></h2>
+  <% end %>
   <h1>Candidates</h1>
+  <small>candidates are shuffled to increase vote anonymity</small>
   <% form.shuffle.map { |s| vote.candidates.to_a[s.to_i] }.each_with_index do |candidate, i| %>
     <p><%= "#{i + 1}. #{candidate.name}" %></p>
   <% end %>
